# LearningRoboticsUsingPython

./: .gitignore  README.md  progress.csv  run_in_docker.sh
Chapter02/: robot.py
Chapter03/: base plate.FCStd  base plate.FCStd1  robot.stl
catkin_ws/: .envrc
catkin_ws/src/chefbot/chefbot_description/: package.xml
catkin_ws/src/chefbot/chefbot_gazebo/: package.xml
catkin_ws/src/chefbot_description/: CMakeLists.txt  package.xml
catkin_ws/src/chefbot_description/gazebo/: chefbot.gazebo.xacro
catkin_ws/src/chefbot_description/launch/: view_model.launch  view_navigation.launch  view_robot.launch
hardware/: ROS-BOM.csv
